# YachtSQL

./: CLAUDE.md  Cargo.toml  PLAN.md  PLAN_NEXT.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: bench_helpers.rs  optimizer_bench.rs  profiling.rs  storage_formats.rs
benches/bigquery/: aggregations.rs  basic.rs  complex_queries.rs  data_types.rs  functions.rs  joins.rs  main.rs  merge.rs  optimizer.rs  profiling.rs  quick.rs  scalability.rs
benches/clickhouse/: aggregations.rs  basic.rs  complex_queries.rs  data_types.rs  functions.rs  joins.rs  main.rs  merge.rs  optimizer.rs  profiling.rs  quick.rs  scalability.rs
benches/postgresql/: aggregations.rs  basic.rs  complex_queries.rs  data_types.rs  joins.rs  (+8 more)
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/storage/: Cargo.toml
crates/storage/benches/: bitmap_bench.rs  simd_filter_benchmark.rs
crates/storage/src/: bitmap.rs  column.rs  constraints.rs  custom_types.rs  dictionary.rs  domain.rs  index.rs  lib.rs  mvcc.rs  record.rs  row.rs  schema.rs  sequence.rs  snapshot.rs  storage_backend.rs  temp_storage.rs  transaction.rs  trigger.rs  type_registry.rs  view.rs
crates/storage/src/indexes/: btree_index.rs  hash_index.rs  index_key.rs  mod.rs
crates/storage/src/table/: auto_increment.rs  constraints.rs  core.rs  data_ops.rs  indexes.rs  iterator.rs  mod.rs  partition.rs  query_ops.rs  schema_ops.rs
scripts/: generate_workload_tests.py
src/: lib.rs
tests/: sql2023_logical_operators_tdd.rs  sql2023_subqueries_tdd.rs  test_cte_query.rs  test_helpers.rs
(+537 files in other folders)
