[package]
name = "yachtsql-storage"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "YachtSQL storage engine with columnar storage for BigQuery"

[dependencies]
yachtsql-common = { path = "../common" }

indexmap = { version = "2.12", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

rust_decimal = { version = "1.36", features = ["serde"] }
